--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,3 @@
-.content {
-  display: flex;
-  margin: 82px auto 32px;
-  padding: 0 16px;
-  max-width: 960px;
-  flex-direction: column;
-  align-items: center;
+.spacer {
+  flex: 1 1 auto;
 }
