feature: episodes list table and endpoint

--- a/src/app/pages/podcast-detail/podcast-detail.component.html
+++ b/src/app/pages/podcast-detail/podcast-detail.component.html
@@ -8,5 +8,7 @@
         [podImageSrc]="item.artworkUrl100" />
     </div>
   </section>
-  <section></section>
+  <section>
+    <app-episodes-table />
+  </section>
 </div>
