--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="warn">
-  <span>{{title}}</span>
+<mat-toolbar>
+  <span [routerLink]="['/']">{{title}}</span>
   <span class="spacer"></span>
   <button mat-icon-button aria-label="icon-button">
     <mat-icon>person</mat-icon>
