--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
-.spacer {
-  flex: 1 1 auto;
+mat-toolbar {
+  span {
+    color: rgb(0, 0, 187);
+    cursor: pointer;
+  }
+  .spacer {
+    flex: 1 1 auto;
+  }
 }
