feature: add real data to table and better handled result of getEpisodes

--- a/src/app/pages/podcast-detail/podcast-detail.component.html
+++ b/src/app/pages/podcast-detail/podcast-detail.component.html
@@ -8,7 +8,7 @@
         [podImageSrc]="item.artworkUrl100" />
     </div>
   </section>
-  <section>
-    <app-episodes-table />
+  <section *ngIf="!isLoadingEpisodes">
+    <app-episodes-table [episodesData]="episodesList" />
   </section>
 </div>
