--- a/src/app/components/episodes-table/episodes-table.component.html
+++ b/src/app/components/episodes-table/episodes-table.component.html
@@ -4,7 +4,7 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Title</th>
       <td mat-cell *matCellDef="let element">
-        <span (click)="onSelectEpisode(element)">{{ element.title }}</span>
+        <span (click)="onSelectEpisode(element)">{{ element.attributes.name }}</span>
       </td>
     </ng-container>
 
@@ -12,7 +12,7 @@
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef>Date</th>
       <td mat-cell *matCellDef="let element" class="minor-column-width">
-        {{ element.date }}
+        {{ element.attributes.releaseDateTime | date:"MM/dd/yy" }}
       </td>
     </ng-container>
 
@@ -20,7 +20,7 @@
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef>Duration</th>
       <td mat-cell *matCellDef="let element" class="minor-column-width">
-        {{ element.duration }}
+        {{ element.attributes.durationInMilliseconds | date:'mm:ss' }}
       </td>
     </ng-container>
 
