--- a/src/app/pages/podcast-detail/podcast-detail.component.scss
+++ b/src/app/pages/podcast-detail/podcast-detail.component.scss
@@ -7,6 +7,9 @@
   .podcast-detail-card {
     padding: 20px;
     padding-bottom: 60px;
+    app-podcast-card {
+      cursor: pointer;
+    }
   }
 }
 
