feature: add mp3 component for audio reproduction

--- a/src/app/pages/podcast-detail/podcast-detail.component.html
+++ b/src/app/pages/podcast-detail/podcast-detail.component.html
@@ -18,7 +18,10 @@
         (emitIdToParent)="changeRouteEpisode($event)" />
     </ng-container>
     <ng-template #mp3Component>
-      <!-- <app-mp3 /> -->
+      <app-mp3
+        [epiName]="selectedEpisode.attributes.name"
+        [epiAudio]="selectedEpisode.attributes.assetUrl"
+        [epiDescription]="selectedEpisode.attributes.description.standard" />
     </ng-template>
   </section>
 </div>
