test: add more test

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,8 +5,7 @@
       <input
         matInput
         type="text"
-        [(ngModel)]="value"
-        (input)="onSearchInput($event)" />
+        [(ngModel)]="value" />
       <button
         *ngIf="value"
         matSuffix
