fix: improve some styles

--- a/src/app/components/episodes-table/episodes-table.component.html
+++ b/src/app/components/episodes-table/episodes-table.component.html
@@ -1,10 +1,18 @@
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Episodes: {{ episodesData.length }}</mat-card-title>
+  </mat-card-header>
+</mat-card>
+
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
     <!-- title Column -->
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Title</th>
       <td mat-cell *matCellDef="let element">
-        <span (click)="onSelectEpisode(element)">{{ element.attributes.name }}</span>
+        <span (click)="onSelectEpisode(element)">{{
+          element.attributes.name
+        }}</span>
       </td>
     </ng-container>
 
@@ -12,7 +20,7 @@
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef>Date</th>
       <td mat-cell *matCellDef="let element" class="minor-column-width">
-        {{ element.attributes.releaseDateTime | date:"MM/dd/yy" }}
+        {{ element.attributes.releaseDateTime | date : 'MM/dd/yy' }}
       </td>
     </ng-container>
 
@@ -20,7 +28,7 @@
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef>Duration</th>
       <td mat-cell *matCellDef="let element" class="minor-column-width">
-        {{ element.attributes.durationInMilliseconds | date:'mm:ss' }}
+        {{ element.attributes.durationInMilliseconds | date : 'mm:ss' }}
       </td>
     </ng-container>
 
