--- a/src/app/pages/podcast-detail/podcast-detail.component.scss
+++ b/src/app/pages/podcast-detail/podcast-detail.component.scss
@@ -6,6 +6,7 @@
   padding: 70px;
   .podcast-detail-card {
     padding-bottom: 60px;
+    max-width: 350px;
     app-podcast-card {
       cursor: pointer;
     }
