--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,6 +3,14 @@
 .search-field-container {
   text-align: end;
   padding: 1rem;
+  .search-field-span{
+    background-color: rgb(0, 0, 187);;
+    padding-inline: 15px;
+    color: white;
+    font-size: 20px;
+    margin-right: 15px;
+    border-radius: 10px;
+  }
 }
 
 .main-container {
